# pnaut-testing

./: .gitignore  CMakeLists.txt  README.md  main.c
lib/: node.h  nsb_stack.h  path.h  util.h
src/: naugraph.c  nauty.c  node.c  nsb_stack.c  path.c  util.c
src/nauty2_8_9/: nauty.h
